syntax = "proto3";
import "google/protobuf/wrappers.proto";

package kubeware;

// Common
message Header {
    string name = 1;
    string value = 2;
}

enum ResponseStatus {
    SUCCESS = 0;
    CONTINUE = 1;
    STOP = 2;
}

// Request
message RequestRequest {
    string method = 1;
    string uri = 2;
    repeated Header headers = 3;
    string body = 4;
}

message RequestResponse {
    ResponseStatus status = 1;
    repeated Header addedHeaders = 2;
    repeated string removedHeaders = 3;
    google.protobuf.StringValue body = 4;
    google.protobuf.UInt32Value statusCode = 5;
}

// Response
message ResponseRequest {
    string method = 1;
    string uri = 2;
    repeated Header requestHeaders = 3;
    repeated Header responseHeaders = 4;
    string requestBody = 5;
    string responseBody = 6;
}

message ResponseResponse {
    ResponseStatus status = 1;
    repeated Header addedHeaders = 2;
    repeated string removedHeaders = 3;
    google.protobuf.StringValue body = 4;
    google.protobuf.UInt32Value statusCode = 5;
}

service Middleware {
    rpc HandleRequest(RequestRequest) returns (RequestResponse);
    rpc HandleResponse(ResponseRequest) returns (ResponseResponse);
}